[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/projectiles/01.png" type="Texture" id=1]
[ext_resource path="res://assets/customNodes/HitBox.gd" type="Script" id=2]
[ext_resource path="res://assets/projectiles/Projectile.gd" type="Script" id=3]
[ext_resource path="res://assets/customNodes/HurtBox.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=3]

[node name="Projectile" type="RigidBody2D"]
collision_mask = 256
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_velocity = Vector2( 50, 0 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 258
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
